// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sitewide Stats UserArtistMap renders corectly when range is invalid 1`] = `
<UserArtistMap
  apiUrl="barfoo"
  range="invalid_range"
>
  <ForwardRef
    style={
      Object {
        "marginTop": 20,
        "minHeight": 600,
      }
    }
  >
    <div
      className="card "
      style={
        Object {
          "marginTop": 20,
          "minHeight": 600,
        }
      }
    >
      <div
        className="row"
      >
        <div
          className="col-md-9 col-xs-6"
        >
          <h3
            style={
              Object {
                "marginLeft": 20,
              }
            }
          >
            <span
              className="capitalize-bold"
            >
              Artist Origins
            </span>
            <small>
               Click on a country to see more details
            </small>
          </h3>
        </div>
        <div
          className="col-md-2 col-xs-4 text-right"
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <span>
            Rank by
          </span>
          <span
            className="dropdown"
          >
            <button
              className="dropdown-toggle btn-transparent capitalize-bold"
              data-toggle="dropdown"
              type="button"
            >
              artist
              s
              <span
                className="caret"
              />
            </button>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li>
                <a
                  href=""
                  onClick={[Function]}
                  role="button"
                >
                  Listens
                </a>
              </li>
              <li
                className="active"
              >
                <a
                  href=""
                  onClick={[Function]}
                  role="button"
                >
                  Artists
                </a>
              </li>
            </ul>
          </span>
        </div>
        <div
          className="col-md-1 col-xs-2 text-right"
        >
          <h4
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <a
              href="#artist-origin"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                color="#000000"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f0c1",
                      "M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z",
                    ],
                    "iconName": "link",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                style={
                  Object {
                    "marginRight": 20,
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-link fa-w-16 fa-sm "
                  color="#000000"
                  data-icon="link"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={
                    Object {
                      "marginRight": 20,
                    }
                  }
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </a>
          </h4>
        </div>
      </div>
      <Loader
        isLoading={false}
      >
        <div
          className="flex-center"
          style={
            Object {
              "minHeight": "inherit",
            }
          }
        >
          <span
            className="text-center"
            style={
              Object {
                "fontSize": 24,
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f06a",
                    "M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z",
                  ],
                  "iconName": "exclamation-circle",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                data-icon="exclamation-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
             
            Invalid range: invalid_range
          </span>
        </div>
      </Loader>
    </div>
  </ForwardRef>
</UserArtistMap>
`;

exports[`Sitewide Stats UserArtistMap renders correctly 1`] = `
<ForwardRef
  style={
    Object {
      "marginTop": 20,
      "minHeight": 600,
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-9 col-xs-6"
    >
      <h3
        style={
          Object {
            "marginLeft": 20,
          }
        }
      >
        <span
          className="capitalize-bold"
        >
          Artist Origins
        </span>
        <small>
           Click on a country to see more details
        </small>
      </h3>
    </div>
    <div
      className="col-md-2 col-xs-4 text-right"
      style={
        Object {
          "marginTop": 20,
        }
      }
    >
      <span>
        Rank by
      </span>
      <span
        className="dropdown"
      >
        <button
          className="dropdown-toggle btn-transparent capitalize-bold"
          data-toggle="dropdown"
          type="button"
        >
          artist
          s
          <span
            className="caret"
          />
        </button>
        <ul
          className="dropdown-menu"
          role="menu"
        >
          <li>
            <a
              href=""
              onClick={[Function]}
              role="button"
            >
              Listens
            </a>
          </li>
          <li
            className="active"
          >
            <a
              href=""
              onClick={[Function]}
              role="button"
            >
              Artists
            </a>
          </li>
        </ul>
      </span>
    </div>
    <div
      className="col-md-1 col-xs-2 text-right"
    >
      <h4
        style={
          Object {
            "marginTop": 20,
          }
        }
      >
        <a
          href="#artist-origin"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            color="#000000"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  512,
                  512,
                  Array [],
                  "f0c1",
                  "M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z",
                ],
                "iconName": "link",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size="sm"
            spin={false}
            style={
              Object {
                "marginRight": 20,
              }
            }
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </h4>
    </div>
  </div>
  <Loader
    isLoading={false}
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <CustomChoropleth
          data={
            Array [
              Object {
                "id": "GBR",
                "value": 50,
              },
              Object {
                "id": "USA",
                "value": 135,
              },
              Object {
                "id": "AUS",
                "value": 6,
              },
              Object {
                "id": "BEL",
                "value": 2,
              },
              Object {
                "id": "DEU",
                "value": 10,
              },
              Object {
                "id": "CAN",
                "value": 10,
              },
              Object {
                "id": "ARG",
                "value": 1,
              },
              Object {
                "id": "ESP",
                "value": 1,
              },
              Object {
                "id": "PRT",
                "value": 1,
              },
              Object {
                "id": "ISL",
                "value": 3,
              },
              Object {
                "id": "NLD",
                "value": 6,
              },
              Object {
                "id": "NOR",
                "value": 2,
              },
              Object {
                "id": "SWE",
                "value": 10,
              },
              Object {
                "id": "IND",
                "value": 30,
              },
              Object {
                "id": "IRL",
                "value": 5,
              },
              Object {
                "id": "FRA",
                "value": 5,
              },
              Object {
                "id": "URY",
                "value": 1,
              },
              Object {
                "id": "DNK",
                "value": 2,
              },
              Object {
                "id": "PAK",
                "value": 1,
              },
              Object {
                "id": "TUR",
                "value": 1,
              },
              Object {
                "id": "JAM",
                "value": 1,
              },
              Object {
                "id": "SGP",
                "value": 1,
              },
              Object {
                "id": "IDN",
                "value": 2,
              },
              Object {
                "id": "PHL",
                "value": 1,
              },
              Object {
                "id": "PRI",
                "value": 1,
              },
              Object {
                "id": "NZL",
                "value": 1,
              },
              Object {
                "id": "MYS",
                "value": 1,
              },
            ]
          }
          selectedMetric="artist"
          width={1200}
        />
      </div>
    </div>
  </Loader>
</ForwardRef>
`;

exports[`User Stats UserArtistMap renders corectly when range is invalid 1`] = `
<UserArtistMap
  apiUrl="barfoo"
  range="invalid_range"
  user={
    Object {
      "name": "foobar",
    }
  }
>
  <ForwardRef
    style={
      Object {
        "marginTop": 20,
        "minHeight": 600,
      }
    }
  >
    <div
      className="card "
      style={
        Object {
          "marginTop": 20,
          "minHeight": 600,
        }
      }
    >
      <div
        className="row"
      >
        <div
          className="col-md-9 col-xs-6"
        >
          <h3
            style={
              Object {
                "marginLeft": 20,
              }
            }
          >
            <span
              className="capitalize-bold"
            >
              Artist Origins
            </span>
            <small>
               Click on a country to see more details
            </small>
          </h3>
        </div>
        <div
          className="col-md-2 col-xs-4 text-right"
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <span>
            Rank by
          </span>
          <span
            className="dropdown"
          >
            <button
              className="dropdown-toggle btn-transparent capitalize-bold"
              data-toggle="dropdown"
              type="button"
            >
              artist
              s
              <span
                className="caret"
              />
            </button>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li>
                <a
                  href=""
                  onClick={[Function]}
                  role="button"
                >
                  Listens
                </a>
              </li>
              <li
                className="active"
              >
                <a
                  href=""
                  onClick={[Function]}
                  role="button"
                >
                  Artists
                </a>
              </li>
            </ul>
          </span>
        </div>
        <div
          className="col-md-1 col-xs-2 text-right"
        >
          <h4
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <a
              href="#artist-origin"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                color="#000000"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f0c1",
                      "M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z",
                    ],
                    "iconName": "link",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                style={
                  Object {
                    "marginRight": 20,
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-link fa-w-16 fa-sm "
                  color="#000000"
                  data-icon="link"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={
                    Object {
                      "marginRight": 20,
                    }
                  }
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </a>
          </h4>
        </div>
      </div>
      <Loader
        isLoading={false}
      >
        <div
          className="flex-center"
          style={
            Object {
              "minHeight": "inherit",
            }
          }
        >
          <span
            className="text-center"
            style={
              Object {
                "fontSize": 24,
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f06a",
                    "M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z",
                  ],
                  "iconName": "exclamation-circle",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                data-icon="exclamation-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
             
            Invalid range: invalid_range
          </span>
        </div>
      </Loader>
    </div>
  </ForwardRef>
</UserArtistMap>
`;

exports[`User Stats UserArtistMap renders correctly 1`] = `
<ForwardRef
  style={
    Object {
      "marginTop": 20,
      "minHeight": 600,
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-9 col-xs-6"
    >
      <h3
        style={
          Object {
            "marginLeft": 20,
          }
        }
      >
        <span
          className="capitalize-bold"
        >
          Artist Origins
        </span>
        <small>
           Click on a country to see more details
        </small>
      </h3>
    </div>
    <div
      className="col-md-2 col-xs-4 text-right"
      style={
        Object {
          "marginTop": 20,
        }
      }
    >
      <span>
        Rank by
      </span>
      <span
        className="dropdown"
      >
        <button
          className="dropdown-toggle btn-transparent capitalize-bold"
          data-toggle="dropdown"
          type="button"
        >
          artist
          s
          <span
            className="caret"
          />
        </button>
        <ul
          className="dropdown-menu"
          role="menu"
        >
          <li>
            <a
              href=""
              onClick={[Function]}
              role="button"
            >
              Listens
            </a>
          </li>
          <li
            className="active"
          >
            <a
              href=""
              onClick={[Function]}
              role="button"
            >
              Artists
            </a>
          </li>
        </ul>
      </span>
    </div>
    <div
      className="col-md-1 col-xs-2 text-right"
    >
      <h4
        style={
          Object {
            "marginTop": 20,
          }
        }
      >
        <a
          href="#artist-origin"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            color="#000000"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  512,
                  512,
                  Array [],
                  "f0c1",
                  "M326.612 185.391c59.747 59.809 58.927 155.698.36 214.59-.11.12-.24.25-.36.37l-67.2 67.2c-59.27 59.27-155.699 59.262-214.96 0-59.27-59.26-59.27-155.7 0-214.96l37.106-37.106c9.84-9.84 26.786-3.3 27.294 10.606.648 17.722 3.826 35.527 9.69 52.721 1.986 5.822.567 12.262-3.783 16.612l-13.087 13.087c-28.026 28.026-28.905 73.66-1.155 101.96 28.024 28.579 74.086 28.749 102.325.51l67.2-67.19c28.191-28.191 28.073-73.757 0-101.83-3.701-3.694-7.429-6.564-10.341-8.569a16.037 16.037 0 0 1-6.947-12.606c-.396-10.567 3.348-21.456 11.698-29.806l21.054-21.055c5.521-5.521 14.182-6.199 20.584-1.731a152.482 152.482 0 0 1 20.522 17.197zM467.547 44.449c-59.261-59.262-155.69-59.27-214.96 0l-67.2 67.2c-.12.12-.25.25-.36.37-58.566 58.892-59.387 154.781.36 214.59a152.454 152.454 0 0 0 20.521 17.196c6.402 4.468 15.064 3.789 20.584-1.731l21.054-21.055c8.35-8.35 12.094-19.239 11.698-29.806a16.037 16.037 0 0 0-6.947-12.606c-2.912-2.005-6.64-4.875-10.341-8.569-28.073-28.073-28.191-73.639 0-101.83l67.2-67.19c28.239-28.239 74.3-28.069 102.325.51 27.75 28.3 26.872 73.934-1.155 101.96l-13.087 13.087c-4.35 4.35-5.769 10.79-3.783 16.612 5.864 17.194 9.042 34.999 9.69 52.721.509 13.906 17.454 20.446 27.294 10.606l37.106-37.106c59.271-59.259 59.271-155.699.001-214.959z",
                ],
                "iconName": "link",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size="sm"
            spin={false}
            style={
              Object {
                "marginRight": 20,
              }
            }
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </h4>
    </div>
  </div>
  <Loader
    isLoading={false}
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <CustomChoropleth
          data={
            Array [
              Object {
                "id": "GBR",
                "value": 50,
              },
              Object {
                "id": "USA",
                "value": 135,
              },
              Object {
                "id": "AUS",
                "value": 6,
              },
              Object {
                "id": "BEL",
                "value": 2,
              },
              Object {
                "id": "DEU",
                "value": 10,
              },
              Object {
                "id": "CAN",
                "value": 10,
              },
              Object {
                "id": "ARG",
                "value": 1,
              },
              Object {
                "id": "ESP",
                "value": 1,
              },
              Object {
                "id": "PRT",
                "value": 1,
              },
              Object {
                "id": "ISL",
                "value": 3,
              },
              Object {
                "id": "NLD",
                "value": 6,
              },
              Object {
                "id": "NOR",
                "value": 2,
              },
              Object {
                "id": "SWE",
                "value": 10,
              },
              Object {
                "id": "IND",
                "value": 30,
              },
              Object {
                "id": "IRL",
                "value": 5,
              },
              Object {
                "id": "FRA",
                "value": 5,
              },
              Object {
                "id": "URY",
                "value": 1,
              },
              Object {
                "id": "DNK",
                "value": 2,
              },
              Object {
                "id": "PAK",
                "value": 1,
              },
              Object {
                "id": "TUR",
                "value": 1,
              },
              Object {
                "id": "JAM",
                "value": 1,
              },
              Object {
                "id": "SGP",
                "value": 1,
              },
              Object {
                "id": "IDN",
                "value": 2,
              },
              Object {
                "id": "PHL",
                "value": 1,
              },
              Object {
                "id": "PRI",
                "value": 1,
              },
              Object {
                "id": "NZL",
                "value": 1,
              },
              Object {
                "id": "MYS",
                "value": 1,
              },
            ]
          }
          selectedMetric="artist"
          width={1200}
        />
      </div>
    </div>
  </Loader>
</ForwardRef>
`;
